# SteamRoulette

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  apply_patches.py  babel.config.js  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  webpack.config.js
SteamBotManager/: pyproject.toml
SteamBotManager/SteamBotManager/: __main__.py  prometheus_setup.py  signals.py
SteamBotManager/SteamBotManager/bot_manager/: app.py
SteamBotManager/SteamBotManager/bot_manager/views/: bots.py
SteamBotManager/SteamBotManager/models/: __init__.py  steam_bot.py
SteamBotManager/SteamBotManager/services/: bot_register.py  captcha_resolver.py
SteamBotMnager/: pyproject.toml
SteamRoulette/: application.py  config.py  containers.py  model_base.py  prometheus_setup.py
SteamRoulette/admin/: __init__.py  __main__.py  admin_provider.py  app.py  containers.py
SteamRoulette/admin/blueprints/: index.py
SteamRoulette/admin/controllers/: steam_bot_c.py
SteamRoulette/admin/form/: auth.py
SteamRoulette/config/docker/: Dockerfile.app
SteamRoulette/db_patch/postgres/: r2020_11_19.sql  r2020_11_22.sql  r2020_11_24.sql
SteamRoulette/libs/: contextmanagers.py  decorators.py  encoders.py  i18n.py  orm.py  rxid.py
SteamRoulette/libs/auth/: auth.py  middleware.py  service.py  session.py  users.py
SteamRoulette/libs/forms/: base.py
SteamRoulette/libs/orm/: types.py
SteamRoulette/libs/utils/: signer.py  tools.py
SteamRoulette/models/: User.py  admin_user.py  base_user.py  steam_bot.py  user.py  user_session.py
SteamRoulette/service/: celery_task_manager.py  db.py  feauture_flags.py  redis.py  scoping.py  taskqueue.py  user_auth.py
SteamRoulette/tasks/: __init__.py  __main__.py  containers.py  prometheus_setup.py  trade_bot.py
SteamRoulette/tests/: conftest.py
SteamRoulette/tests/func/: conftest.py
config/: app.yaml  config.yaml
config/docker/: Dockerfile.app  Dockerfile.assets  Dockerfile.ssh  nginx.conf
db_schema/alembic/: env.py
roulette/: README.md  index.html  package-lock.json  package.json
roulette/src/: App.jsx  Auth.jsx  aio.js  routes.js
tests/: conftest.py
tests/fixtures/: db_fixtures.py
tests/func/: conftest.py
(+21 files in other folders)
