[tool.poetry]
name = "steamroulette"
version = "0.1.0"
description = ""
authors = ["josephlouislg <vladstetsenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
PyYAML = "^5.3.1"
SQLAlchemy = "^1.3.20"
setuptools = "^50.3.2"
psycopg2 = "^2.8.6"
Flask-SQLAlchemy = "^2.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
