[tool.poetry]
name = "steamroulette"
version = "0.1.0"
description = ""
authors = ["josephlouislg <vladstetsenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
PyYAML = "^5.3.1"
SQLAlchemy = "^1.3.20"
setuptools = "^50.3.2"
psycopg2 = "^2.8.6"
Flask-SQLAlchemy = "^2.4.4"
alembic = "^1.4.3"
celery = "^5.0.2"
redis = "^3.5.3"
trafaret = "^2.1.0"
prometheus-client = "^0.8.0"
dependency-injector = "^4.3.6"
itsdangerous = "^1.1.0"
WTForms = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
